Fixed title overflow

--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ body {
   font-weight: 300;
   letter-spacing: 2px;
   line-height: 1.3;
+  width: 480px;
 }
 @media (max-width: 768px) {
   .title {
